Current state of JDK 20 migration