@@ -5,8 +5,9 @@ import static java.lang.foreign.ValueLayout.JAVA_LONG;
 
 import com.itemis.fluffyj.memory.FluffyNativeMethodHandle;
 
-import java.lang.foreign.MemoryAddress;
-import java.lang.foreign.MemorySession;
+import java.lang.foreign.Arena;
+import java.lang.foreign.MemorySegment;
+import java.lang.foreign.SegmentScope;
 import java.lang.foreign.SymbolLookup;
 import java.util.function.Function;
 
@@ -17,18 +18,17 @@ public final class ScardLibNativeBridge extends NativeBase implements AutoClosea
     private final FluffyNativeMethodHandle<Long> freeMem;
     private final FluffyNativeMethodHandle<Long> releaseCtx;
 
-    private final MemorySession mySession;
+    private final Arena myArena;
 
     /**
      * Create a new instance.
      *
      * @param libSup - Creates a "Connection" to the underlying native library in form of a
-     *        {@link SymbolLookup}. The connection will be closed if the provided
-     *        {@link MemorySession} is closed.
+     *        {@link SymbolLookup}. The connection will be closed when {@link #close()} is called.
      */
-    public ScardLibNativeBridge(Function<MemorySession, SymbolLookup> libSup) {
-        mySession = MemorySession.openConfined();
-        var lib = libSup.apply(mySession);
+    public ScardLibNativeBridge(Function<SegmentScope, SymbolLookup> libSup) {
+        myArena = Arena.openConfined();
+        var lib = libSup.apply(myArena.scope());
 
         establishCtx = FluffyNativeMethodHandle
             .fromCLib(lib)
@@ -61,15 +61,15 @@ public final class ScardLibNativeBridge extends NativeBase implements AutoClosea
      * "https://docs.microsoft.com/en-us/windows/win32/api/winscard/nf-winscard-scardestablishcontext">https://docs.microsoft.com/en-us/windows/win32/api/winscard/nf-winscard-scardestablishcontext</a>
      *
      * @param dwScope - {@link #PCSC_SCOPE_SYSTEM} or {@link #PCSC_SCOPE_USER}.
-     * @param pvReserved1 - Reserved for future use and must be {@link MemoryAddress#NULL}.
-     * @param pvReserved2 - Reserved for future use and must be {@link MemoryAddress#NULL}.
+     * @param pvReserved1 - Reserved for future use and must be {@link MemorySegment#NULL}
+     * @param pvReserved2 - Reserved for future use and must be {@link MemorySegment#NULL}.
      * @param phContext
      * @return {@link #SCARD_S_SUCCESS} if success, else error code according to <a href=
      *         "https://docs.microsoft.com/en-us/windows/win32/secauthn/authentication-return-values">SmartCard
      *         return values</a>.
      */
-    public long sCardEstablishContext(long dwScope, MemoryAddress pvReserved1, MemoryAddress pvReserved2,
-            MemoryAddress phContext) {
+    public long sCardEstablishContext(long dwScope, MemorySegment pvReserved1, MemorySegment pvReserved2,
+            MemorySegment phContext) {
         return callNativeFunction(() -> establishCtx.call(dwScope, pvReserved1, pvReserved2, phContext));
     }
 
@@ -85,8 +85,8 @@ public final class ScardLibNativeBridge extends NativeBase implements AutoClosea
      *         "https://docs.microsoft.com/en-us/windows/win32/secauthn/authentication-return-values">SmartCard
      *         return values</a>.
      */
-    public long sCardListReaders(MemoryAddress hContext, MemoryAddress mszGroups, MemoryAddress mszReaders,
-            MemoryAddress pcchReaders) {
+    public long sCardListReaders(MemorySegment hContext, MemorySegment mszGroups, MemorySegment mszReaders,
+            MemorySegment pcchReaders) {
         return callNativeFunction(() -> listReaders.call(hContext, mszGroups, mszReaders, pcchReaders));
     }
 
@@ -100,7 +100,7 @@ public final class ScardLibNativeBridge extends NativeBase implements AutoClosea
      *         "https://docs.microsoft.com/en-us/windows/win32/secauthn/authentication-return-values">SmartCard
      *         return values</a>.
      */
-    public long sCardFreeMemory(MemoryAddress hContext, MemoryAddress pvMem) {
+    public long sCardFreeMemory(MemorySegment hContext, MemorySegment pvMem) {
         return callNativeFunction(() -> freeMem.call(hContext, pvMem));
     }
 
@@ -113,16 +113,16 @@ public final class ScardLibNativeBridge extends NativeBase implements AutoClosea
      *         "https://docs.microsoft.com/en-us/windows/win32/secauthn/authentication-return-values">SmartCard
      *         return values</a>.
      */
-    public long sCardReleaseContext(MemoryAddress hContext) {
+    public long sCardReleaseContext(MemorySegment hContext) {
         return callNativeFunction(() -> releaseCtx.call(hContext));
     }
 
     @Override
     public void close() {
-        if (mySession.isAlive()) {
+        if (myArena.scope().isAlive()) {
             synchronized (this) {
-                if (mySession.isAlive()) {
-                    mySession.close();
+                if (myArena.scope().isAlive()) {
+                    myArena.close();
                 }
             }
         }
