@@ -7,7 +7,6 @@ import static com.itemis.fluffyj.tests.FluffyTestHelper.assertNullArgNotAccepted
 import static com.itemis.fluffyj.tests.exceptions.ExpectedExceptions.EXPECTED_CHECKED_EXCEPTION;
 import static com.itemis.jscdlib.ScDaemonHandle.ASSUAN_INVALID_PID;
 import static com.itemis.jscdlib.ScDaemonHandle.ASSUAN_SOCKET_CONNECT_FDPASSING;
-import static java.lang.foreign.ValueLayout.ADDRESS;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.junit.jupiter.api.Assertions.assertDoesNotThrow;
@@ -32,8 +31,9 @@ import org.mockito.Mockito;
 import org.mockito.stubbing.Answer;
 import org.mockito.stubbing.Stubber;
 
-import java.lang.foreign.MemoryAddress;
-import java.lang.foreign.MemorySession;
+import java.lang.foreign.Arena;
+import java.lang.foreign.MemorySegment;
+import java.lang.foreign.ValueLayout;
 import java.nio.file.Paths;
 
 public class ScDaemonHandleTest {
@@ -46,7 +46,7 @@ public class ScDaemonHandleTest {
     private ScDaemonNativeBridge bridgeMock;
     private JScdEnvSocketDiscovery socketDiscoveryMock;
     private AssuanMethodInvocations invocations;
-    private MemorySession testMemorySession;
+    private Arena testArena;
 
     private ScDaemonHandle underTest;
 
@@ -55,7 +55,7 @@ public class ScDaemonHandleTest {
         bridgeMock = mock(ScDaemonNativeBridge.class);
         socketDiscoveryMock = mock(JScdEnvSocketDiscovery.class);
         invocations = new AssuanMethodInvocations();
-        testMemorySession = MemorySession.openConfined();
+        testArena = Arena.openConfined();
 
         when(socketDiscoveryMock.discover()).thenReturn(Paths.get("scdaemon.socket.file"));
 
@@ -65,8 +65,8 @@ public class ScDaemonHandleTest {
 
         underTest = constructUnderTest();
 
-        verify(bridgeMock).assuanNew(any(MemoryAddress.class));
-        verify(bridgeMock).assuanSocketConnect(eq(invocations.ctx), any(MemoryAddress.class),
+        verify(bridgeMock).assuanNew(any(MemorySegment.class));
+        verify(bridgeMock).assuanSocketConnect(eq(invocations.ctx), any(MemorySegment.class),
             eq(ASSUAN_INVALID_PID),
             eq(ASSUAN_SOCKET_CONNECT_FDPASSING));
     }
@@ -133,9 +133,9 @@ public class ScDaemonHandleTest {
 
         underTest.sendCommand(expectedCommand, line -> System.out.println(line), line -> System.out.println(line));
 
-        verify(bridgeMock).assuanTransact(eq(invocations.ctx), any(MemoryAddress.class), any(MemoryAddress.class),
-            eq(MemoryAddress.NULL),
-            any(MemoryAddress.class), eq(MemoryAddress.NULL), any(MemoryAddress.class), eq(MemoryAddress.NULL));
+        verify(bridgeMock).assuanTransact(eq(invocations.ctx), any(MemorySegment.class), any(MemorySegment.class),
+            eq(MemorySegment.NULL),
+            any(MemorySegment.class), eq(MemorySegment.NULL), any(MemorySegment.class), eq(MemorySegment.NULL));
         assertThat(invocations.command).as("Unexpected command").isEqualTo(expectedCommand);
     }
 
@@ -171,11 +171,11 @@ public class ScDaemonHandleTest {
             underTest.close();
         });
 
-        verify(bridgeMock).assuanRelease(any(MemoryAddress.class));
+        verify(bridgeMock).assuanRelease(any(MemorySegment.class));
     }
 
     private static final class AssuanMethodInvocations {
-        MemoryAddress ctx = null;
+        MemorySegment ctx = null;
         String command = null;
     }
 
@@ -184,10 +184,10 @@ public class ScDaemonHandleTest {
         // https://github.com/eclipse-jdt/eclipse.jdt.core/issues/456
         Mockito.mock(Object.class);
 
-        when(bridgeMock.assuanNew(any(MemoryAddress.class))).thenAnswer(invocation -> {
-            var ctxPtrSegPtr = invocation.getArgument(0, MemoryAddress.class);
-            var ctxSeg = segment().of("Assuan ctx lives here").allocate(testMemorySession);
-            ctxPtrSegPtr.set(ADDRESS, 0, ctxSeg.address());
+        when(bridgeMock.assuanNew(any(MemorySegment.class))).thenAnswer(invocation -> {
+            var ctxPtrSegPtr = invocation.getArgument(0, MemorySegment.class);
+            var ctxSeg = segment().of("Assuan ctx lives here").allocate(testArena.scope());
+            ctxPtrSegPtr.set(ValueLayout.ADDRESS.asUnbounded(), 0, ctxSeg.address());
             invocations.ctx = ctxSeg.address();
             return answer.answer(invocation);
         });
@@ -198,7 +198,7 @@ public class ScDaemonHandleTest {
         // https://github.com/eclipse-jdt/eclipse.jdt.core/issues/456
         Mockito.mock(Object.class);
 
-        when(bridgeMock.assuanSocketConnect(any(MemoryAddress.class), any(MemoryAddress.class), eq(ASSUAN_INVALID_PID),
+        when(bridgeMock.assuanSocketConnect(any(MemorySegment.class), any(MemorySegment.class), eq(ASSUAN_INVALID_PID),
             eq(ASSUAN_SOCKET_CONNECT_FDPASSING)))
                 .thenAnswer(answer);
     }
@@ -208,11 +208,11 @@ public class ScDaemonHandleTest {
         // https://github.com/eclipse-jdt/eclipse.jdt.core/issues/456
         Mockito.mock(Object.class);
 
-        when(bridgeMock.assuanTransact(any(MemoryAddress.class), any(MemoryAddress.class), any(MemoryAddress.class),
-            any(MemoryAddress.class),
-            any(MemoryAddress.class), any(MemoryAddress.class), any(MemoryAddress.class), any(MemoryAddress.class)))
+        when(bridgeMock.assuanTransact(any(MemorySegment.class), any(MemorySegment.class), any(MemorySegment.class),
+            any(MemorySegment.class),
+            any(MemorySegment.class), any(MemorySegment.class), any(MemorySegment.class), any(MemorySegment.class)))
                 .thenAnswer(invocation -> {
-                    invocations.command = invocation.getArgument(1, MemoryAddress.class).getUtf8String(0);
+                    invocations.command = invocation.getArgument(1, MemorySegment.class).getUtf8String(0);
                     return answer.answer(invocation);
                 });
     }
@@ -223,7 +223,7 @@ public class ScDaemonHandleTest {
         var stubber = Mockito.doAnswer(answer);
         try {
             var whenMethod = Stubber.class.getMethod("when", Object.class);
-            ((ScDaemonNativeBridge) whenMethod.invoke(stubber, bridgeMock)).assuanRelease(any(MemoryAddress.class));
+            ((ScDaemonNativeBridge) whenMethod.invoke(stubber, bridgeMock)).assuanRelease(any(MemorySegment.class));
         } catch (Exception e) {
             Assertions.fail("Could not mock call.", e);
         }
